# GraphicsTermProject_Client

./: CMakeLists.txt  README.md
Includes/: Client.hpp
Sources/: Client.cpp  Main.cpp  upd_client.cpp
